<resources>
    <string name="app_name">Lab7.1</string>
    <string name="information">Information</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="additional_tools">Additional tools</string>
    <string name="save_as">Save as</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="dictionary">Dictionary</string>
</resources>