<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuItem_dictionary"
        android:title="@string/dictionary"
        app:showAsAction="always">
        <menu></menu>
    </item>
    <item
        android:id="@+id/information"
        android:title="@string/information" />

    <item
        android:id="@+id/menu_history"
        android:title="@string/history" />
    <item
        android:id="@+id/menuItem_search"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItem_settings"
        android:title="@string/settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_add_tools"
        android:title="@string/additional_tools"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_save_as"
                android:title="@string/save_as" />
            <item
                android:id="@+id/menu_shortcut"
                android:title="@string/create_shortcut" />
        </menu>
    </item>
</menu>